# AutoML

./: .gitignore  LEARNINGS.md  README.md  app.py  main_pipeline.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
Config/: config.py
src/data_processing/: loader.py  preprocessing_pipeline.py  splitting.py  task_detector.py  validator.py
src/models/: final_evaluation.py  hyperparameter_tuning_setup.py  registry.py
src/models/trainers/: classification.py  regression.py
src/utils/: mlflow_setup.py
src/visualizations/: eda.py  training.py  tuning.py
tests/: conftest.py
tests/test_data_processing/: test_eda.py  test_loader.py  test_splitting.py  test_task_detector.py  test_validator.py
tests/test_models/: test_classification_trainer.py  test_final_evaluation.py  test_registry.py  test_regression_trainer.py  test_tuning.py
tests/test_preprocessing/: test_pipeline.py
tests/test_visualization/: test_training_visualizer.py  test_tuning_visualizer.py
