[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automl"
version = "0.1.0"
description = "AutoML System with Streamlit UI"
readme = "README.md"
authors = [
    {name = "MohanadAhmed"},
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "numpy>=2.4.2",
    "scikit-learn>=1.7.2",
    "xgboost>=3.1.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "plotly>=6.5.0",
    "streamlit>=1.51.0",
    "joblib>=1.5.2",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    "mlflow>=3.6.0",
    "category_encoders>=2.9.0",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=4.0",
    "black>=25.11.0",
    "mypy>=1.19.0"
]

notebook = [
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.1",
]

[project.urls]
Homepage = "https://github.com/mohanadcv/AutoML"
Repository = "https://github.com/mohanadcv/AutoML.git"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
pythonpath = ["."]


[tool.setuptools]
packages = ["src", "src.data_processing", "src.models", "src.models.trainers", "src.visualizations", "src.utils", "Config"]